manuscripts/elife-03254/v2/manuscript.md
# A long non-coding RNA is required for targeting centromeric protein A to the human centromere

## Authors

- Delphine Quénet<sup>1</sup>
- Yamini Dalal<sup>1</sup> ([ORCID: 0000-0002-7655-6182](https://orcid.org/0000-0002-7655-6182)) †

### Affiliations

1. Laboratory of Receptor Biology and Gene Expression Center for Cancer Research, National Cancer Institute Bethesda United States

† Corresponding author

## Abstract

The centromere is a specialized chromatin region marked by the histone H3 variant CENP-A. Although active centromeric transcription has been documented for over a decade, the role of centromeric transcription or transcripts has been elusive. Here, we report that centromeric α-satellite transcription is dependent on RNA Polymerase II and occurs at late mitosis into early G1, concurrent with the timing of new CENP-A assembly. Inhibition of RNA Polymerase II-dependent transcription abrogates the recruitment of CENP-A and its chaperone HJURP to native human centromeres. Biochemical characterization of CENP-A associated RNAs reveals a 1.3 kb molecule that originates from centromeres, which physically interacts with the soluble pre-assembly HJURP/CENP-A complex in vivo, and whose down-regulation leads to the loss of CENP-A and HJURP at centromeres. This study describes a novel function for human centromeric long non-coding RNAs in the recruitment of HJURP and CENP-A, implicating RNA-based chaperone targeting in histone variant assembly.

## Introduction

Specialized chromatin domains called centromeres play an essential role in chromosome segregation, serving as a platform for kinetochore complex formation, which in turn binds spindle microtubules at mitosis (Verdaasdonk and Bloom, 2011). Although centromeric DNA sequence is not uniform across species, centromere function is conserved (Sullivan, 2009). In humans, AT-rich 171 bp α-satellite repeats lacking any known genes are the primary DNA component of the centromere (Waye and Willard, 1987). Centromeres are characterized by the presence of the centromeric histone H3 variant (CENH3/CENP-A in human). Centromeric chromatin has long been considered heterochromatic, despite exhibiting a bivalent organization with heterochromatin-like post-translational modifications (PTMs), such as H3 and H4 hypo-acetylation, and transcription-coupled PTMs, including dimethylation on H3 lysine 4 (H3K4me2) (Sullivan and Karpen, 2004; Heintzman et al., 2007; Zhou et al., 2011). The function of such bivalent modifications has remained mysterious. Indeed, despite the common assumption that centromeres are largely dormant, a number of recent studies have pointed to the importance of transcription at centromeres in multiple organisms, which appears to be essential for the maintenance of centromere integrity (Hall et al., 2012). Chemical inhibition of either RNA Polymerase I (RNAPI), or RNA Polymerase II (RNAPII), results in loss of the inner kinetochore protein CENP-C, and in chromosome mis-segregation (Wong et al., 2007; Chan et al., 2012). Centromeric RNA components also seem to contribute to the structural integrity of the mitotic centromere (Wong et al., 2007). However, the exact timing of centromeric transcription, the polymerase involved, the identity of centromeric RNAs and their precise role in maintaining native centromere integrity in human cells has been elusive.

In this study, we report that centromeric RNAs play a critical role in the maintenance of the human centromere in vivo. Using chromatin immunoprecipitation (IP), and immunofluorescence (IF) on chromatin fibers, we find that RNAPII, in conjunction with TATA-box binding protein (TBP) localizes to, and actively transcribes native human centromeres from late mitosis to early G1 (eG1). Biochemical purification and sequencing of the RNA associated with human centromeric chromatin at eG1 reveals a 1.3 kb long transcript. This RNA physically interacts with CENP-A and its chaperone HJURP (Holliday junction recognition protein) in the pre-assembly soluble state in vivo. Targeted sequence-specific knockdown of the transcript results in the formation of multipolar spindles and lagging chromosomes in subsequent mitoses, leading to chromosome instability. IF analysis of centromeric chromatin fibers demonstrates that these cellular and nuclear phenotypes arise specifically from the abrogation of CENP-A and HJURP localization to the centromere. Together, our data describe a direct physical role for a centromeric long non-coding RNA (lncRNA) in HJURP targeting, subsequent CENP-A loading, and the maintenance of centromere integrity. Our study supports the possibility that an lncRNA-based mechanism is involved in targeting CENP-A and its chaperone HJURP to the centromere.

## Results

### RNAPII is associated with native human centromeres at eG1

Centromeric transcription has been previously described in human cells, and RNAPII has been implicated in this process (Saffery et al., 2003; Wong et al., 2007; Bergmann et al., 2011; Chan et al., 2012). To investigate the timing of centromeric transcription, we used synchronized HeLa cells at G2, eG1, and G1/S to track the activated form of RNAPII (i.e., serine 2 phosphorylated, RNAPIIS2P) on centromeric chromatin fibers throughout the cell cycle by IF (Figure 1—figure supplement 1). RNAPIIS2P co-localizes with the inner kinetochore protein CENP-B and centromeric α-satellite DNA specifically at eG1 (Figure 1A, Figure 1—figure supplement 2A). We also noted that TBP, a partner of RNAPII normally involved in transcription initiation (Vannini and Cramer, 2012), is localized on eG1 CENP-A-rich fibers (Figure 1A). These data suggest that centromeres are actively transcribed by RNAPII machinery at eG1.

![Figure 1.](https://cdn.elifesciences.org/articles/03254/elife-03254-fig1-v2.jpg)

**Figure 1.:** (A) Chromatin fibers prepared from synchronized HeLa cells at eG1, G1/S, and G2 phases were co-stained for RNAPIIS2P and TBP (green) with centromeric proteins CENP-B and CENP-A (red), respectively. The DAPI raw image is shown for a representative chromatin fiber (cyan). Three independent experiments were performed and in each, a minimum of five fibers were analyzed per slide (co-localization on the same chromatin fiber at eG1: between CENP-B and RNAPIIS2P = 10/15; and between CENP-A and TBP = 9/16). Scale bar: 1 μm. (B) CENP-A, CENP-C or RNAPIIS2P were immunoprecipitated, and co-purifying partners were detected on Western blots (1.5% of input and UB, 75% of IP). Co-IF, co-immunofluorescence; IP, immunoprecipitate; UB, unbound.

![Figure 1—figure supplement 1.](https://cdn.elifesciences.org/articles/03254/elife-03254-fig1-figsupp1-v2.jpg)

**Figure 1—figure supplement 1.:** HeLa cells were synchronized in G1/S phase by two consecutives treatments of thymidine, and then released until G2 (9 hr), mitosis (M; 10 hr), and early G1 (eG1; 11 hr) cell cycle phases. The synchronization and the potential effect of actinomycin D or α-amanitin treatment (2 hr) were assessed by cell cycle analysis. NS, non-synchronized cells; PR, post-release.

![Figure 1—figure supplement 2.](https://cdn.elifesciences.org/articles/03254/elife-03254-fig1-figsupp2-v2.jpg)

**Figure 1—figure supplement 2.:** (A) RNAPIIS2P (green) was co-stained with centromeric α-satellite DNA FISH probe (red) on chromatin fibers from eG1-synchronized cells. (cyan, DAPI). Three independent experiments were performed, and a minimum of five fibers were counted per slide (co-localization on the same chromatin fiber: between CENP-B and centromeric α-satellite DNA = 11/15). (B) The progressive accumulation of mono-nucleosomes after chromatin digestion (0.5–8 min) with MNase was analyzed on agarose gel. The arrow indicates the chosen MNase time used for experiments in the manuscript. (C) Chromatin extract was incubated in presence of agarose beads and co-precipitated proteins were analyzed on Western blot (1.5% of input and UB, 75% of IP). FISH, fluorescence in situ hybridization; co-IF, co-immunofluorescence; IP, immunoprecipitate; UB, unbound.

We next sought to establish whether there was a physical interaction between CENP-A chromatin and RNAPII. In order to achieve this, we extracted chromatin from non-synchronized cells after a short MNase digestion, to obtain long chromatin arrays that are rich in tri-, tetra-, and penta-nucleosomes (Figure 1—figure supplement 2B). From this input chromatin, centromeric chromatin was immunoprecipitated with specific antibodies against either CENP-A, or the inner kinetochore protein CENP-C or no antibody (mock IP). The mock IP control shows no enrichment of any of the centromeric proteins tested (Figure 1—figure supplement 2C). As expected, Western blots revealed reciprocal co-purification of CENP-A and CENP-C (Figure 1B, left and middle panels). RNAPII and its partner TBP also co-purified with CENP-A and CENP-C (Figure 1B, left and middle panels). To further establish an interaction between RNAPII and centromeric proteins, we performed the reciprocal experiment, precipitating RNAPIIS2P from solubilized chromatin, and testing for centromeric partners. While Western blots revealed little or no interaction of RNAPII with CENP-C, a robust and reproducible binding of RNAPII to TBP and CENP-A was observed (Figure 1B, right panel). Thus, active RNAPII machinery is physically associated with CENP-A chromatin at eG1.

### RNAPII transcribes native human centromeres at late mitosis-eG1

Recent studies have indicated that RNAPII transcribes centromeres at mitosis (Chan et al., 2012). However, our RNAPII localization data above showed RNAPII enrichment occurs primarily at eG1 (Figure 1A). To examine the consequence of eG1 RNAPII localization at centromeres, HeLa cells were synchronized at G2, mitosis and eG1, and briefly treated (2 hr) with drugs to specifically block either RNAPI (actinomycin D) or RNAPII (α-amanitin) activity (Figure 1—figure supplement 1) (Bensaude, 2011). After RNA extraction and retro-transcription, we determined the expression of control genes and centromeric α-satellite repeats by semi-quantitative PCR. As expected, actinomycin D and α-amanitin inhibited transcription of target genes of RNAPI (e.g., 18S rRNA) or RNAPII (e.g., GAPDH), respectively (Figure 2, left and middle graphs). Compared to non-treated conditions, actinomycin D treatment or α-amanitin treatment in G2 phase had no impact on centromeric α-satellite expression (Figure 2, right graph). Consistent with a previous study (Chan et al., 2012), RNAPII inhibition in mitotic cells revealed a decrease (15.6%) in centromeric transcripts (Figure 2, right graph). However, when RNAPII was blocked in eG1, a larger reduction (35.1%) was observed (Figure 2, right graph). These results suggest that RNAPII transcribes centromeres not solely at mitosis, but also throughout eG1.

![Figure 2.](https://cdn.elifesciences.org/articles/03254/elife-03254-fig2-v2.jpg)

**Figure 2.:** G2 (green), mitotic (M; blue), and eG1 (black) synchronized cells were treated 2 hr with either actinomycin D or α-amanitin, to block RNA Polymerase I or RNAPII, respectively. After RNA purification and retro-transcription, expression levels of control target genes (18S rRNA and GAPDH) and centromeric α-satellite transcripts were assessed by semi-quantitative PCR. The graph represents the average of three biological replicates, the y-axis plots the ratio (±SD) of gene expression after treatment (actinomycin D or α-amanitin) compared to the non-treated condition. p-values indicating statistical significance are presented where appropriate above the histograms. *p > 0.1, **0.001 < p < 0.05, and ***p < 0.001.

### Centromeric transcription at early G1 (eG1) is required for HJURP and CENP-A targeting to the centromere

The synchrony of centromeric transcription and CENP-A recruitment onto centromeres at late mitosis-eG1 led us to examine whether active transcription is required for CENP-A loading. To test this hypothesis, we briefly treated eG1-synchronized cells with α-amanitin (2 hr) to block RNAPII activity as above, and quantified potential changes in intensity for CENP-A or CENP-B IF signal using ImageJ. Consistent with its role as a constitutive centromeric DNA-binding protein (Verdaasdonk and Bloom, 2011), CENP-B staining intensity was heterogeneous (Figure 3B, Figure 3—figure supplement 1A), but identical in both non-treated (NT) and α-amanitin-treated cells (Figure 3A,B; Supplementary file 1), demonstrating that its localization is independent of centromeric transcription. Whereas punctate CENP-A spots can be seen under both conditions, when RNAPII was blocked, the intensity of the CENP-A signal was decreased by ∼50% in cells (Figure 3A,B; Supplementary file 1). To ensure that this decrease was not due to reduced expression of CENP-A or its chaperone HJURP, total levels of both proteins were quantified by Western blot. No noticeable changes in protein levels were detected upon α-amanitin treatment (Figure 3—figure supplement 1B). These data indicate that equal amounts of CENP-A and HJURP were available at eG1, but potentially unable to load at the centromere.

![Figure 3.](https://cdn.elifesciences.org/articles/03254/elife-03254-fig3-v2.jpg)

**Figure 3.:** (A) eG1 synchronized HeLa cells were treated or not (NT) with α-amanitin (α-ama) for 2 hr before staining for centromeric proteins CENP-A or CENP-B (green). The DAPI raw image is shown for a representative cell (cyan). Three independent experiments were performed and in each, a minimum of 30 cells were analyzed per slide. Scale bar: 5 μm. (B) Signal intensity of CENP-A and CENP-B spots from (A) was quantified using ImageJ, and relative ratios of α-amanitin vs non-treated conditions were determined. Means ± SD from three independent experiments is represented on the graph. Quantification values are tabulated in Supplementary file 1. (C) Centromeric proteins CENP-A and CENP-B (red) were co-stained with HJURP (green) and RNAPII phosphorylated on serine 2 (RNAPIIS2P, green), respectively, on centromeric chromatin fibers prepared from eG1 synchronized cells treated or not with α-amanitin for 2 hr (cyan, DAPI). Three independent experiments were performed and in each, a minimum of five chromatin fibers were analyzed per slide (co-localization on the same chromatin fiber after α-amanitin compared to non-treated: between CENP-B and RNAPIIS2P = 9/15 vs 10/15; and between CENP-A and HJURP = 2/15 vs 9/15). Scale bar: 1 μm. Co-IF, co-immunofluorescence.

![Figure 3—figure supplement 1.](https://cdn.elifesciences.org/articles/03254/elife-03254-fig3-figsupp1-v2.jpg)

**Figure 3—figure supplement 1.:** (A) eG1-synchronized HeLa cells were treated with α-amanitin for 2 hr before staining for centromeric protein CENP-B (green) and DAPI (cyan). The heterogeneity of the CENP-B signal on a picture is shown with magnification of one cell with high signal (1 and 2) and low signal (3 and 4). Scale bar: 5 μm. (B) eG1-synchronized cells were treated, or not, with α-amanitin (2 hr), before total protein extraction, and the expression levels of CENP-A and HJURP were quantified by Western blot. The graph represents the average of three biological replicates, the y-axis plots the ratio (±SD) of protein level after α-amanitin compared to the non-treated condition for CENP-A and HJURP Western blot, respectively. IF, immunofluorescence.

The decrease of CENP-A signal at centromeres during eG1 after RNAPII inhibition might be due to either the loss of pre-existing CENP-A, or a defect in targeting of newly synthesized CENP-A by its chaperone HJURP. To discriminate between these two hypotheses, we analyzed the localization of CENP-A, CENP-B, RNAPIIS2P, and HJURP on chromatin fibers, with or without α-amanitin treatment at eG1. Consistent with the known effect of α-amanitin on RNAPII (i.e., blocking RNAPII elongation without inducing the release of RNAPII) (Nguyen et al., 1996; Bensaude, 2011), inhibition of transcription did not affect RNAPIIS2P localization onto the centromeric fiber (Figure 3C, first top panel). Similarly, CENP-B localization onto centromeric chromatin fibers remained unaffected as well (Figure 3C, first panel). Consistent with the whole cell data presented above (Figure 3A,B), after RNAPII inhibition, not only were CENP-A signals reduced on chromatin fibers (Figure 3C, second panel), HJURP was almost completely lost (Figure 3C, second panel). The loss of HJURP (Figure 3C) combined with the ∼50% decrease of CENP-A signal after α-amanitin treatment (Figure 3B), suggests that RNAPII-dependent transcription is required for the targeting of HJURP, and for the subsequent loading of new CENP-A to the centromeric chromatin fiber at eG1.

### A 1.3 kb centromeric RNA binds the soluble HJURP/CENP-A pre-assembly complex at early G1 (eG1)

Previous data have documented the existence of ncRNA at centromeres in multiple species (Hall et al., 2012). In humans, no genes have been annotated within native centromeres, suggesting a transcription event at α-satellite DNA repeats most likely leads to the synthesis of ncRNAs. In order to characterize potential centromeric transcripts, we sought to purify them biochemically. Total RNAs were extracted from cells, DNase I treated to remove genomic contamination, separated on denaturing gels, transferred to Northern blots, and subjected to hybridization with radiolabelled centromeric α-satellite probes, in order to reveal potential complementary transcripts. Northern blots revealed a unique centromeric RNA species migrating at approximately ∼1.3 kb (Figure 4A, Figure 4—figure supplement 1A). Control experiments were performed to exclude the possibility of trace genomic DNA contamination contributing to the 1.3 kb band. Treatment of RNA samples with RNase A (Figure 4—figure supplement 1B), or purification of RNA from cells treated with α-amanitin (Figure 4—figure supplement 1C), both demonstrated the absence of the 1.3 kb band on Northern blots, supporting the interpretation that the 1.3 kb band derives solely from an RNA species.

![Figure 4.](https://cdn.elifesciences.org/articles/03254/elife-03254-fig4-v2.jpg)

**Figure 4.:** (A) Total RNAs from HeLa cells were separated on denaturing gel and visualized by Northern blot with radiolabeled centromeric α-satellite probes. (B) Co-immunoprecipitated RNAs by CENP-A or HJURP were analyzed by Northern blot as in (A). CF, chromatin fraction; IP, immunoprecipitate; MW, molecular weight; SF, soluble fraction; UB, unbound.

![Figure 4—figure supplement 1.](https://cdn.elifesciences.org/articles/03254/elife-03254-fig4-figsupp1-v2.jpg)

**Figure 4—figure supplement 1.:** (A) To determine the size of the centromeric α-satellite transcripts, the graph of the distance (in y) between the border of the Northern blot and each band of the molecular weight as a function of the number of bases was made. The distance of the centromeric α-satellite transcript band was analyzed using the standard curve from this graph to deduce its size. (B) Total RNAs treated with RNase A were separated on a denaturing gel, and revealed by Northern blot with radiolabeled centromeric α-satellite probes. (C) eG1-synchronized cells were treated, or not, with α-amanitin (2 hr). RNAs were processed and analyzed on Northern blot as in (B) to examine whether trace DNA contamination could yield the same band as in (A).

![Figure 4—figure supplement 2.](https://cdn.elifesciences.org/articles/03254/elife-03254-fig4-figsupp2-v2.jpg)

**Figure 4—figure supplement 2.:** RNA binding residues in CENP-A, H3, Scm3, and HJURP were predicted by computational analysis using the BindN+ program. Binding residues are labeled with ‘+’ and in red, whereas non-binding residues are labeled with ‘−’ and in green. The confidence of binding potential ranges from low (0) to high (9).

![Figure 4—figure supplement 3.](https://cdn.elifesciences.org/articles/03254/elife-03254-fig4-figsupp3-v2.jpg)

![Figure 4—figure supplement 4.](https://cdn.elifesciences.org/articles/03254/elife-03254-fig4-figsupp4-v2.jpg)

**Figure 4—figure supplement 4.:** (A) CENP-A and HJURP were immunoprecipitated from eG1 cells, separated on SDS-PAGE and revealed on Western blot (1.5% of input and UB, 100% of IP). To exclude non-specific binding of CENP-A or HJURP to the secondary beads, immunoprecipitation was performed with beads in the absence of antibody (mock IP). (B) RNAs immunoprecipitated from the mock IP in (A) were analyzed on Northern blot using radiolabeled centromeric α-satellite probes. CF, chromatin fraction; IP, immunoprecipitate; MW, molecular weight; SF, soluble fraction; UB, unbound.

The inhibition of transcription was accompanied by the loss of CENP-A and HJURP at the centromere during eG1 (Figure 3C), and our results above (Figure 4A) supported the possibility of a unique RNA species present at centromeres in eG1. A logical prediction arising from these data is that centromeric transcripts might physically associate with the soluble pre-assembly HJURP/CENP-A complex in vivo. Indeed, computational RNA-binding prediction algorithms revealed potential RNA binding residues in both HJURP and CENP-A (Figure 4—figure supplement 2; Wang et al., 2010). Thus, to further test this hypothesis, we probed for physical interactions between CENP-A and its chaperone HJURP with centromeric α-satellite transcripts.

After a brief MNase digestion of eG1-synchronized cells, we immunoprecipitated CENP-A and HJURP from both, the soluble fraction (composed of free histones and nuclear factors, SF), and the chromatin fraction (composed of chromatin and associated complexes, CF) (Experimental Scheme, Figure 4—figure supplement 3). CENP-A and HJURP complexes were immunoprecipitated from SF and CF. Mock IPs pulled down neither CENP-A nor HJURP (Figure 4—figure supplement 4A). Consistent with HJURP chaperoning CENP-A at eG1 (Dunleavy et al., 2009; Foltz et al., 2009; Shuaib et al., 2010), these proteins co-purified from both SF and CF (Figure 4—figure supplement 4A). From these IPs, RNAs were purified, electrophoresed, transferred to Northern blots, and subsequently hybridized to the same radiolabelled centromeric α-satellite probes as above (Figure 4A). These Northern blots revealed no RNA signal in the mock IP (Figure 4—figure supplement 4B). In contrast, the 1.3 kb RNA is physically associated with CENP-A in both SF and CF (Figure 4B), and interacts with HJURP only in the SF (Figure 4B). These data provide evidence that the 1.3 kb centromeric RNA physically associates with the soluble HJURP/CENP-A pre-assembly complex at eG1.

### CENP-A associated RNA localizes to centromeres

We next sought to purify, clone, and sequence CENP-A-associated RNA (Experimental Scheme, Figure 4—figure supplement 3). This sequencing approach was moderately successful, yielding one sequence of ∼665 nucleotides (cenRNA#1, Figure 5—figure supplement 1). This RNA sequence is unique and contains four semi-regularly spaced 28-bp repeats with a weak homology to the canonical CENP-B box (data not shown), but does not map to the currently annotated human genome sequence, to any other organisms, or to plasmids. Since most human centromeres remain intractable to complete sequencing (Lander et al., 2001), this outcome is not entirely surprising. We were unable to detect cenRNA#1 directly on Northern blots, presumably due to its low abundance or due to its instability. Therefore, to directly reveal the genomic origin of the sequenced RNA, we converted it to a DNA FISH probe (cenRNA#1DNA). We next either performed control IF/FISH using the Xist locus (XistDNA, on the q-arm of the X-chromosome) and CENP-A, IF/FISH with cenRNA#1DNA and CENP-A, or IF/double-FISH with CENP-A, cenRNA#1DNA and centromeric α-satellite probes, on chromatin fibers. As expected, control IF/FISH between XistDNA and CENP-A yielded no appreciable signal (Figure 5A). In contrast, about half the CENP-A, or centromeric α-satellite stained fibers, contain the cenRNA#1DNA signal (Figure 5B, left vs right, quantification below panel). This result is consistent with the fact that centromeric α-satellite DNA sequences are not strictly conserved across all human centromeres (Lander et al., 2001). Significantly, 100% of the cenRNA#1DNA was found associated with CENP-A (Figure 5B, top right panel), and with centromeric α-satellite DNA probe (Figure 5B, lower right panel), demonstrating robust association on centromeric chromatin fibers. Thus, these data (Figure 5) indicate that the sequenced lncRNA (Figure 5—figure supplement 1), which is associated with CENP-A at eG1 (Figure 4B), indeed has a centromeric origin.

![Figure 5.](https://cdn.elifesciences.org/articles/03254/elife-03254-fig5-v2.jpg)

**Figure 5.:** (A) CENP-A (green) was co-stained with Xist DNA FISH probe (FISH XistDNA, red) on chromatin fibers (cyan, DAPI). Two independent experiments were performed and in each, a minimum of eight chromatin fibers were analyzed per slide (co-localization on the same chromatin fiber between CENP-A and FISH XistDNA = 0/18). Scale bar: 1 μm. (B) Chromatin fibers were either co-stained by IF/FISH with CENP-A (green) and cenRNA#1DNA (red), or IF/double-FISH with CENP-A (green), cenRNA#1DNA (red) and centromeric α-satellite probes (gray). The DAPI raw image is shown for a representative chromatin fiber (cyan). Two independent experiments were performed and in each, a minimum of eight chromatin fibers were analyzed per slide (co-localization on the same chromatin fiber between CENP-A and cenRNA#1DNA and FISH α-satellite compared to no co-localization = 9/20 vs 11/20). Scale bar: 1 μm. FISH, fluorescence in situ hybridization; IF, immunofluorescence.

![Figure 5—figure supplement 1.](https://cdn.elifesciences.org/articles/03254/elife-03254-fig5-figsupp1-v2.jpg)

**Figure 5—figure supplement 1.:** RNAs immunoprecipitated with CENP-A were retro-transcribed and subcloned. One 675 nucleotide long sequence called cenRNA#1 was obtained by sequencing, and is reported here. The sequence of shRNAcenRNA#1 is underlined.

![Figure 5—figure supplement 2.](https://cdn.elifesciences.org/articles/03254/elife-03254-fig5-figsupp2-v2.jpg)

**Figure 5—figure supplement 2.:** (A) 6 days post-transfection of shRNAscram or shRNAcenRNA#1, cell morphology was observed by phase contrast microscopy. Scale bar: 100 pixels. (B) Cells were treated as in (A) and stained for β-actin (green) and DAPI (cyan) to reveal alterations in cell morphology. Scale bar: 5 μm. cDNA, complementary DNA; IF, immunofluorescence ; NT, non-treated.

Next, we assessed the functional role of cenRNA#1 by an shRNA strategy to down-regulate specifically its expression (Figure 5—figure supplement 1). Cells were transfected with control scrambled (shRNAscram) or shRNAcenRNA#1 constructs and selected with puromycin. Cells transfected with shRNAscram displayed no changes in morphology and density, whereas cells treated with shRNAcenRNA#1 displayed significant loss of cell density (down by ∼70%, relative to control) and presented aberrant morphology (Figure 5—figure supplement 2A,B). Altogether these data suggest that cenRNA#1 transcript significantly affects cell integrity.

### Targeting destruction of centromeric α-satellite transcripts results in severe mitotic defects

We were curious whether it was the act of centromeric transcription alone, or the product of transcription (i.e., centromeric RNAs), that was necessary for HJURP and CENP-A targeting to the centromere at eG1. To distinguish between these hypotheses, we further examined functional consequences arising from the targeted loss of total centromeric α-satellite RNA, without inhibiting RNAPII transcription.

Using the centromeric α-satellite consensus sequence (Waye and Willard, 1987), we designed two shRNAs targeting α-satellite sequences (shRNAsat1 and shRNAsat2) to destroy centromeric transcripts (Figure 6—figure supplement 1A).

At 6 days post-transfection with the control scrambled (shRNAscram) or shRNAsat constructs and puromycin selection, the expression level of centromeric α-satellite transcript was analyzed by qtPCR. Compared to control shRNAscram, cells transfected with shRNAsat constructs displayed a significant decrease (∼70%) of the centromeric α-satellite transcript (Figure 6—figure supplement 1B), confirming targeted destruction was accomplished.

Evaluation of cell morphology by phase contrast microscopy revealed that shRNAsat-transfected cells were less dense (down by ∼70%, relative to control) and exhibited abnormal morphology (Figure 6A). Phenotypes included a large and flat cytoplasm, cellular protrusions, and multinucleate cells (Figure 6A). To better elucidate cell defects, we stained with β-actin, which revealed cells with several nuclei and atypical shape (Figure 6B). Reduced cell density and morphological abnormalities could result from cells exiting the replicative cell cycle and undergoing senescence (Kuilman et al., 2010). We performed β-galactosidase staining to test for senescence (Bandyopadhyay et al., 2005). Senescent BJ cells were used as positive control, and displayed the expected blue color after the β-galactosidase assay (Figure 6—figure supplement 2). However, no significant increase in senescence was seen in either shRNAscram or shRNAsat-transfected cells (Figure 6—figure supplement 2).

![Figure 6.](https://cdn.elifesciences.org/articles/03254/elife-03254-fig6-v2.jpg)

**Figure 6.:** (A) Six days post-transfection of empty vector, control scrambled (shRNAscram), or α-satellite shRNA (shRNAsat1, shRNAsat2), cell morphology was observed by phase contrast microscopy. Scale bar: 100 pixels. (B) Cells were treated as in (A) and stained for β-actin (green) and DAPI (cyan) to reveal alterations in cell morphology. Scale bar: 5 μm. (C) Cells were treated as in (A), synchronized in mitosis and stained for α-tubulin (green), CENP-B (red) and DAPI (cyan/blue). Three independent experiments were performed and in each, a minimum of 30 cells were analyzed per slide. Scale bar: 5 μm. IF: immunofluorescence.

![Figure 6—figure supplement 1.](https://cdn.elifesciences.org/articles/03254/elife-03254-fig6-figsupp1-v2.jpg)

**Figure 6—figure supplement 1.:** (A) The centromeric α-satellite consensus sequence was used to design α-satellite shRNA (shRNAsat1 and shRNAsat2) compared to control shRNA containing a scrambled sequence (shRNAscram). Residues of the CENP-B box are marked by a black box, and the sequences of shRNAsat1/2 are underlined. (B) Centromeric α-satellite transcript level after transfection of shRNAscram, shRNAsat1, or shRNAsat2 was measured by qtPCR. The graph represents the average of three biological replicates, with relative expression (±SD) of α-satellite transcript in shRNAsat-transfected cells compared to shRNAscram-transfected cells.

![Figure 6—figure supplement 2.](https://cdn.elifesciences.org/articles/03254/elife-03254-fig6-figsupp2-v2.jpg)

**Figure 6—figure supplement 2.:** Six days post-transfection of empty vector, control scrambled (shRNAscram) or α-satellite shRNA (shRNAsat1 or shRNAsat2), the potential senescent status of transfected cells was tested by a β-galactosidase assay. Senescent BJ cells were used as positive control (blue).

The kinds of cellular morphological changes observed above (Figure 6A,B) have previously been linked to defects in cell division, specifically in mitosis (Carone et al., 2013). To test this alternative possibility, shRNA-transfected cells were synchronized at mitosis, and at 6 days post-transfection, stained for markers of mitotic spindles (α-tubulin) and centromeres (CENP-B), respectively. shRNAscram-transfected cells displayed normal mitotic structures (Figure 6C). In contrast, almost half (42.2%) of shRNAsat-transfected cells presented abnormal mitoses, with multipolar spindles and lagging chromosomes (Figure 6C).

### Targeting destruction of centromeric α-satellite transcripts results in abrogation of CENP-A and HJURP targeting at early G1 (eG1)

A mechanistic explanation for the observed mitotic aberrances in the centromeric transcript depleted cells (Figure 6C) could be loss of centromere integrity, driven by deficient targeting of HJURP/CENP-A complexes to centromeres. We were curious whether the loss of centromeric transcripts directly abrogated CENP-A and HJURP localization at centromere. Because the loss of centromeric transcripts resulted in reduced cell density and mitotic defects (Figure 6), there were insufficient cells for biochemical experiments. Thus, we turned to chromatin fibers to investigate this issue. After synchronization at eG1, chromatin fibers were isolated from shRNAscram cells, or the few remaining of shRNAsat-transfected cells, and stained for RNAPII and centromeric proteins. In both, shRNAscram- or shRNAsat-transfected cells, RNAPIIS2P remains associated with centromeric chromatin fibers (Figure 7, first top panel), confirming that RNAPII localization and transcription of centromeres are independent of centromeric transcripts. Additionally, CENP-B and CENP-C localization was also unaffected at centromeres (Figure 7, second and third panels). In contrast, on centromeric fibers from shRNAsat-transfected cells, CENP-A and HJURP were barely detectable (Figure 7, fourth and fifth panels). These data suggest that at eG1, CENP-A targeting through its chaperone HJURP is dependent not just on active transcription itself, nor on processes that facilitate centromeric transcription (Barnhart et al., 2011; Wang et al., 2014), but specifically requires the presence of centromeric transcripts. The long-term loss of these centromeric transcripts leads to mitotic defects (Figure 6), which are physically underpinned by the loss of HJURP recruitment and CENP-A loading (Figure 7) to native centromeres.

![Figure 7.](https://cdn.elifesciences.org/articles/03254/elife-03254-fig7-v2.jpg)

**Figure 7.:** Chromatin fibers were prepared from shRNAscram, shRNAsat1, or shRNAsat2-transfected cells synchronized at eG1. To visualize centromeric domains, co-IF was performed for CENP-B (red), CENP-C (green) and RNA Polymerase II (phosphorylated on serine 2, RNAPIIS2P, green), whereas CENP-A (red) and HJURP (red) antibodies were co-stained with a DNA FISH probe against centromeric α-satellite DNA repeats (green). The DAPI raw image is shown for a representative chromatin fiber (cyan). Three independent experiments were performed and in each, five chromatin fibers were analyzed per slide (co-localization on the same chromatin fiber in shRNAsat1 or shRNAsat2-transfected cells: between CENP-B and RNAPIIS2P = 9/15 and 8/15; CENP-B and CENP-C = 14/15 and 13/15; between CENP-A and centromeric α-satellite DNA = 3/15 and 1/15; between HJURP and centromeric α-satellite DNA = 1/15 and 0/15, respectively). Scale bar: 1 μm. FISH, fluorescence in situ hybridization; IF, immunofluorescence.

![Figure 7—figure supplement 1.](https://cdn.elifesciences.org/articles/03254/elife-03254-fig7-figsupp1-v2.jpg)

**Figure 7—figure supplement 1.:** At mitosis/eG1, Mis18 primes centromeres for active transcription by RNA Polymerase II (RNAPII) (step 1), leading to the synthesis of long non-coding RNAs, which are released into the nucleoplasm at eG1. These centromeric transcripts bind pre-assembly HJURP/CENP-A/H4 in the nucleoplasm (step 2), and specifically target the resulting nucleoprotein complex back to active native centromeres. Thus, a ‘dual lock’ system for active centromeric loading is provided by the Mis 18 complex facilitating eG1 centromeric transcription, and the lncRNA/HJURP/CENP-A complex binding centromeres (step 3), potentially via the formation of RNA–DNA hybrids with centromeric DNA.

## Discussion

Active transcription is thought to be essential for centromere structure and function (Saffery et al., 2003; Wong et al., 2007; Bergmann et al., 2011; Chan et al., 2012). In this study, we investigated the mechanistic contribution of transcription, and centromeric transcripts, to centromeric integrity. We show that RNAPII and TBP are loaded onto and transcribe human centromeric chromatin at eG1 (Figure 1). This cell cycle regulated centromeric transcription is required for the synthesis of centromeric RNAs (Figure 2). Biochemical purification and analysis reveal a 1.3 kb transcript which is physically associated with CENP-A and HJURP in the soluble pre-assembly state (Figure 4). Targeted destruction of this centromeric RNA leads to the loss of centromere integrity and subsequent mitotic and cellular defects (Figure 6), which are mechanistically underpinned by the loss of HJURP and CENP-A recruitment to centromeres at eG1 (Figure 7). Altogether, these data reveal a hitherto unsuspected function for lncRNAs in RNA-dependent chaperone targeting to centromeres in human cells (Figure 7—figure supplement 1).

Several specific questions arise from our observations. First, no active genes have ever been described in human centromeres, making the identification of RNAPII (Figure 1; Saffery et al., 2003) and TBP at the centromere surprising. Because the repetitive nature of centromeric α-satellite DNA has thus far disallowed complete sequencing, successful annotation of transcriptional motifs that may exist in human centromeres remains to be accomplished. Our data show that centromeric transcription is an event integral to the epigenetic maintenance of centromere integrity, and discovering precisely where such motifs lie within active centromeres is an exciting avenue of research.

Second, our functional characterization of a 1.3 kb centromeric lncRNA deriving from centromeric transcription reveals its interaction with CENP-A and HJURP at eG1. Specific depletion of centromeric α-satellite transcripts affects the recruitment of both CENP-A and HJURP proteins, directly implicating centromeric RNA in CENP-A and HJURP targeting onto centromeres at eG1. We note that previous data have shown that HJURP loading is also dependent on its interaction with the Mis18 complex, in a CDK1-dependent manner (Barnhart et al., 2011; Moree et al., 2011; Muller et al., 2014; Wang et al., 2014). However, mutations of CDK1-phosphorylated sites in HJURP only partially abrogate its recruitment in vivo, highlighting the existence of other hitherto unknown CENP-A loading factors (Wang et al., 2014). We speculate centromeric lncRNAs are, in fact, the missing factor. Thus, of immediate interest is the elucidation of the structure of the 1.3 kb centromeric RNA with its cognate binding domains in CENP-A and HJURP.

Third, the exact molecular process involved in targeting lncRNA-nucleoprotein complexes to centromeres is an unexpected and novel avenue to pursue. For example, whereas it is well known that Xist RNA binds its cognate DNA locus only in cis (Plath et al., 2002), it is unknown if centromeric transcripts can bind in cis solely to the centromere of origin, or in trans, across all centromeres. An attractive possibility is centromeric RNAs originate from multiple centromeres and serve a redundant function to ensure accurate targeting of CENP-A/HJURP to homologous centromeres.

Fourth, our study has potential evolutionary implications. Prior studies have described RNA originating from centromeres in multiple species (Bouzinba-Segard et al., 2006; Carone et al., 2009). In mouse cells, a 120 nucleotide minor satellite RNA is associated with centromeres (Bouzinba-Segard et al., 2006), and in tammar wallaby, centromeric transcription results in the production of ∼40 nucleotides crasiRNAs (centromere repeats-associated short interacting RNAs) (Carone et al., 2009; Lindsay et al., 2012; Carone et al., 2013). A logical explanation for the difference in size of ncRNAs generated in different organisms may be the divergent nature of the centromeric DNA sequences across species, which in turn may lead to divergence in the type of centromeric RNAs produced. However, despite this difference, over-expression or down-regulation of mouse minor satellite RNA, or crasiRNAs in tammar wallaby, or the 1.3 kb centromeric human RNA identified in our study, leads to similar cellular and mitotic defects. Our data reveal that such RNAs generated from human centromeric transcription bind HJURP and CENP-A in the soluble form and that mitotic loss seen in cells depleted of these lncRNAs is specifically linked to abrogation of HJURP-mediated targeting of CENP-A. Thus, our data suggest an evolutionarily conserved basis for the phenomena of centromeric transcription seen in other organisms. We speculate that accurate CENP-A targeting onto active centromeres probably requires a ‘dual-lock’ system, coupling chromatin-bound centromeric factors (such as Mis18), which facilitate cell-cycle regulated centromeric transcription, which in turn results in the production of a lncRNA/CENP-A/chaperone complex that can effectively target CENP-A back to pre-existing active centromeric sites (Figure 7—figure supplement 1).

It is noteworthy that transcription-coupled, chaperone-mediated histone variant assembly governs much of chromatin biology. Our report potentially reveals an RNA-based mechanism by which specialized histone-variant driven chromatin structures might be maintained in vivo.

## Materials and methods

### Antibodies

Antibodies are commercially available, except the custom CENP-A antibody (available upon request) used for CENP-A detection on Western blot. Supplementary file 2 lists all antibodies used for each experiment.

### Cell culture and RNA polymerase inhibition

HeLa cells were grown at 37°C in a humidified atmosphere containing 5% CO2, in Dulbecco's modified Eagle's medium high in glucose and L-glutamine (#11965; Gibco, Grand Island, NY) supplemented with 10% Fetal Bovine Serum (#26140-079; Gibco) and 1X Pen/Strep solution (#10378-016; Gibco).

All synchronizations were done by double thymidine block (0.5 mM, #T9250; Sigma-Aldrich, Saint Louis, MO). After a first block of 19 hr, cells were released for 9 hr, followed by a second thymidine block of 16 hr. Cells then were released for the appropriate time (9 hr for G2, 10 hr for mitosis, and 11 hr for eG1, Figure 1—figure supplement 1). Synchronization was assessed by flow cytometry. Cells were stained with propidium iodide (#P817045, Invitrogen, Grand Island, NY) and analyzed on a FACScalibur (Becton Dickinson, San Jose, CA). Synchronized cells were treated with either 0.2 μg/ml of actinomycin D (#A2263, Sigma-Aldrich) or 2 μg/ml of α-amanitin (#A1410; Sigma-Aldrich) to analyze the effect of RNAPI and RNAPII inhibition, respectively, on centromere transcription.

### RNA extraction, retro-transcription and polymerase chain reaction (PCR)

RNAs were extracted by Trizol reagent (#15596-026; Ambion, Grand Island, NY) according to manufacturer protocol. Briefly, cells were resuspended in Trizol, and following 5-min incubation at room temperature (RT), 200 μl of chloroform (#BP1145-1, Fisher Scientific, Pittsburgh, PA) was added. After centrifugation at 12,000 rpm for 15 min at 4°C, the clear phase was mixed with 500 μl of isopropanol (#534021, Sigma-Aldrich) and centrifuged. The pellet was washed with 75% ethanol (diluted from 100% ethanol, #61509-0010, Acros Organics, Pittsburgh, PA) and resuspended in water complemented with DNase I buffer, DNase I (#M0303; New England Biolabs–NEB, Ipswich, MA), and RNase inhibitor (#M0314, NEB) to avoid genomic DNA contamination. After incubation for 30 min at 37°C, the DNase I activity was inhibited by addition of 5 mM EDTA (#351-027-721, Quality Biological, Gaithersburg, MD) and incubation at 65°C for 10 min. RNAs were purified a second time by phenol:chloroform:isoamyl alcohol (25:24:1; #AC327115000) method and ethanol precipitated. RNAs were conserved at −80°C until further analysis.

After quantification by UV-spectroscopy (230, 260, and 280 nm) and verification of RNA quality on 1.5% agarose gel, equivalent concentrations of RNA were subjected to retro-transcription, using the SuperScript III First-Strand Synthesis System with random hexamer primers (#18080-051), and amplified with Takara PCR kit (#RR001B; Clontech Laboratories Inc., Mountain View, CA). Control reactions without the reverse transcriptase or complementary DNA were performed to rule out DNA contamination and non-specific amplification, respectively. Primer sequences are included in Supplementary file 3 (Dunham et al., 1992). PCR conditions were defined for each analyzed sequence. The setup for GAPDH and centromeric α-satellite were 3 min 94°C; [10 s 98°C, 30 s 57°C, 30 s 72°C] 30 cycles; 5 min 72°C. The conditions for 18S rRNA were 3 min 94°C; [10 s 98°C, 30 s 52°C, 30 s 72°C] 30 cycles; 5 min 72°C. Finally, the PCR status for cenRNA#1 were 3 min 94°C; [10 s 98°C, 30 s 57°C, 30 s 72°C] 45 cycles; 5 min 72°C.

### Immunofluorescence (IF)

Cells were grown on poly-D-Lysine-treated coverslips in six-well plate and synchronized by double thymidine block. After two washes with cold 1× PBS, they were prefixed for 30 s with cold 4% paraformaldehyde (PFA, #15714-S; Electron Microscopy Sciences, Hatfield, PA) in PEM (80 mM K-PIPES pH6.8, 5 mM EGTA pH7.0, 2 mM MgCl2). Following three washes with cold PEM, soluble proteins were extracted for 5 min on ice with 0.5% Triton X-100 (#327372500, Acros Organics) in CSK (10 mM PIPES pH6.8, 100 mM NaCl, 300 mM sucrose, 1 mM EGTA, 3 mM MgCl2). Few drops of 4% PFA in PEM were added for 5 min. Slides were then incubated with fresh 4% PFA in PEM for 40 min on ice. After three washes with PEM, cells were permeabilized with 0.5% Triton X-100 in PEM for 30 min at RT, washed again three times, and blocked in 1× TBS, 3% Bovine Serum Albumin, 5% normal goat serum (#005-000-121; Jackson ImmunoResearch, West Grove, PA) for 1 hr at RT. Finally cells were incubated with the primary antibody diluted in 1× TBS, 1% Bovine Serum Albumin, 5% normal goat serum over-night (O/N) at 4°C in a humidified chamber. Slides were washed three times for 5 min at RT with 1× TBS, 0.1% Tween 20 (#P7949, Sigma-Aldrich), and incubated with secondary antibody for 1 hr at RT. After washing, the same protocol was repeated for co-IF, and then cells were stained with DAPI (4′,6-diamidino-2-phenylindole, #D9542; Sigma-Aldrich) in 1× TBS and mounted with mowiol solution (Ame et al., 2009).

For β-actin IF, a classic protocol was used. Briefly, cells were fixed with 2% PFA, 1× PBS for 10 min on ice. After three washes with 1× PBS, 0.1% Triton X-100, 1% Bovine Serum Albumin, cells were incubated with the primary antibody diluted in 1× PBS, 0.1% Triton X-100, 1% Bovine Serum Albumin, 5% normal goat serum O/N at 4°C in a humidified chamber. Slides were washed three times for 5 min at RT and incubated with secondary antibody for 1 hr at RT. After washing, cells were stained with DAPI in 1× PBS and mounted with mowiol solution.

Chromatin fiber protocol was adapted from Sullivan, (2010). Trypsinized HeLa cells were incubated in hypotonic buffer (75 mM KCl) for 10 min at RT, before cytospining for 10 min at 400 rpm. Slides were immersed in freshly prepared fiber lysis buffer (2.5 mM Tris–HCl pH7.5, 0.5 M NaCl, 1% Triton X-100, 0.4 M urea) for 15 min at RT, then in fixation buffer (4% formaldehyde (#F8775; Sigma-Aldrich), 1X PBS, final pH 7.4) for 10 min at RT, and finally in permeabilization buffer (1X PBS; 0.1% Triton X-100) for 7 min at RT. After blocking (1X PBS, 0.5% Bovine Serum Albumin, 0.01% Triton X-100), chromatin fibers were stained O/N at 4°C in a humidified chamber with primary antibody diluted in blocking solution complemented with 1% normal goat serum. Slides were washed three times for 5 min at RT with 1X PBS, 0.05% Tween 20, before incubation with secondary antibody for 1 hr at RT. After washing, the protocol was repeated for co-IF, and the fibers were then stained with DAPI in 1× PBS and mounted with mowiol solution.

When FISH was performed, antibody–protein complexes were crosslinked (8% formaldehyde diluted in distilled water) for 10 min at RT, denaturated in 70% formamide (#F47670; Sigma-Aldrich), 2X SSC buffer (#46-020-CM, Corning, Manassas, VA) for 8 min at 78°C, and then incubated with denaturated probed (tagged with biotin-16-dUTP [#11093070910, Roche, Indianapolis, IN] or Cy™5 dUTP [#PA55022, GE Healthcare, Pittsburgh, PA] by nick translation method) O/N at 37°C in a humidified chamber. Slides were washed 5 min at 45°C three times with 50% formamide, 2X SSC solution, and four times with 2X SSC, 0.05% Tween 20 solution. Slides were blocked in 4X SSC, 0.1% Tween 20, 3% Bovine Serum Albumin for 30 min at RT. Following the incubation with the secondary antibody at 37°C for 1 hr, slides were washed four times for 5 min each at 45°C with 4X SSC, 0.1% Tween 20, stained with DAPI in 2X SSC, and mounted coverslip with mowiol solution.

All samples were observed with a DeltaVision RT system (Applied Precision, Issaquah, WA) controlling an interline charge-coupled device camera (Coolsnap, Roper Scientific, Martinsried, Germany) mounted on an inverted microscope (IX-70; Olympus, Center Valley, PA). Images were captured by using a 60× at 0.2 μm z sections for cell and 100× objective at 0.1 μm z sections for chromatin fiber, deconvolved, and projected by using softWoRx (Applied Precision). Three independent experiments were performed and in each, 5–10 chromatin fibers or 30–50 cells were analyzed per slide.

### IF analysis

To quantify IF signals, the acquisition of pictures for all samples of an experiment was performed with the same time of exposure during the same day to avoid variability from the instrument. Using ImageJ (ImageJ 1.43U), signal intensity of each CENP-A or CENP-B spot inside of the nucleus (as defined by the DAPI staining) was extracted. The background level of the nucleus was subtracted from the average value of the spot intensity per cell. For each experiment, the average value of the spot intensity per cell and the ratio—signal intensity in treated condition vs signal intensity in non-treated condition—was measured. The mean and standard deviation values of three experiments are presented in the Supplementary file 1.

### Chromatin extraction and immunoprecipitation (IP)

Five F175 flasks of HeLa cells (70–80% of confluence) were used for IP. Cells were trypsinized (#25300; Gibco) and washed three times with cold 1× PBS, 0.1% Tween 20 coupled with 5 min centrifugation at 800 rpm at 4°C. Nuclei were isolated in TM2 buffer (20 mM Tris–HCl pH8, 2 mM MgCl2, 0.5 mM PMSF) complemented with 0.5% NP40 substitute (#74385, Sigma-Aldrich), and washed once with TM2 buffer. Chromatin was digested 2 min at 37°C with 0.2 unit/ml of MNase (#N3755; Sigma-Aldrich) in 0.1 M TE buffer (0.1 M NaCl, 10 mM Tris–HCl pH8, 0.2 mM EGTA) complemented with 2 mM CaCl2. The reaction was stopped by addition of 10 mM EGTA and transferred to ice. After centrifugation for 5 min at 800 rpm at 4°C, the nuclear pellet was resuspended in 1 ml low-salt buffer (0.5× PBS, 5 mM EGTA, 0.5 mM PMSF, protease inhibitor cocktail [#05892953001; Roche]), and the chromatin was extracted O/N at 4°C in an end-over-end rotator. An aliquot of the supernatant obtained after centrifugation for 5 min at 8000 rpm at 4°C was saved as ‘input’ (1.5%). At 4°C, sample was precleared with protein A/G Plus agarose beads (#sc-2003; Santa Cruz Biotechnology, Dallas, TX) for 30 min at 4°C in an end-over-end rotator, incubated with the primary antibody for 4 hr, followed by IP with protein A/G Plus agarose beads for 2 hr. After centrifugation, an aliquot was saved as ‘unbound’ (UB, 1.5%), and the bead-associated IP was washed three times with low-salt buffer, and stored at −20°C in Laemmli buffer (30 μl) for Western blot analysis.

### RNA-chromatin IP and RNA purification

A general scheme is presented on Figure 4—figure supplement 3. Five F175 flasks of eG1-synchronized HeLa cells (70–80% of confluency) were used for IP. After trypsinization, cells were washed two times with cold 1× PBS, 0.1% Tween 20, fixed 10 min at RT with 1% formaldehyde, quenched by addition of 125 mM glycine, and washed twice with cold 1X PBS, 0.1% Tween 20. Samples were treated as described above (i.e., ‘Chromatin extraction and immunoprecipitation’) in presence of 10 mM Ribonucleoside Vanadyl Complex (RVC, #1402; NEB). After centrifugation 5 min at 800 rpm at 4°C following the MNase digestion, the supernatant was saved and named ‘soluble fraction’, whereas the nuclear pellet was suspended in 1 ml low-salt buffer (0.5× PBS, 5 mM EGTA, 0.5 mM PMSF, protease inhibitor cocktail, 10 mM RVC) and chromatin was extracted O/N at 4°C. The supernatant obtained after centrifugation 5 min at 8000 rpm at 4°C was named ‘chromatin fraction’. IPs were performed as described previously with both fractions (i.e., ‘Chromatin extraction and immunoprecipitation’). After washes, bead-associated IPs were divided in two equal samples for protein analysis by Western blot and for RNA study.

For RNA study, RNA–protein complexes were eluted from protein A/G Plus agarose beads by incubation in an end-over-end rotator for 15 min at RT with 250 μl elution buffer (1% SDS; 0.1 M NaHCO3). The supernatant was saved and the elution step was repeated once more. All samples (input, unbound and IP) were denatured at 65°C for 2 hr with 200 mM NaCl. Proteins were digested with 20 μg of proteinase K (#AM2548; Ambion) in the presence of 40 mM Tris–HCl pH6.5, 10 mM EDTA at 42°C for 45 min. To avoid genomic DNA contamination, samples were treated with DNase I for 30 min at 37°C. The reaction was stopped by addition of 5 mM EDTA, and RNAs were purified by phenol:chloroform:isoamyl alcohol method and ethanol precipitation. Samples were stored at −80°C until further use in retro-transcription PCR and Northern blot.

### Western blot

Samples in Laemmli buffer were denatured 5 min at 95°C, plunged on ice for 2 min, loaded into a 4–20% SDS-PAGE (#456-1093; Biorad, Hercules, CA) for separation in 1× Tris Glycine SDS Running Buffer (#161-0732; Biorad), and transferred to Whatman nitrocellulose membrane (#10439396; Sigma-Aldrich) in Tris Glycine transfer buffer (#351-087-131; Quality Biological) diluted in 20% ethanol. Membrane was blocked in Odyssey blocking buffer (#927-40000; Li-Cor, Lincoln, NE) diluted in 1× PBS (1:1) at RT for 1 hr, and incubated with primary antibody diluted in blocking buffer complemented with 0.1% Tween 20 O/N at 4°C. After three washes in 1× PBS, 0.1% Tween 20, the membrane was incubated with the secondary antibody conjugated to IRDye680 (#926-68072 and #926-68073; Li-Cor) diluted in blocking buffer complemented with 0.1% Tween 20 and 0.05% SDS for 1 hr at RT. The membrane was washed in the same conditions than previously and proteins were detected by scan on Odyssey CLx scanner (Li-Cor).

### Protein quantification

eG1-synchronized HeLa cells treated with α-amanitin (as described in ‘Cell culture and RNA Polymerase inhibition’) were resuspended in lysis buffer (20 mM Tris–HCl pH7.5, 400 mM NaCl, 2 mM dithiothreitol, 1% Nonidet P40 substitute, 0.5 mM PMSF, protease inhibitor cocktail). After three cycles of freezing and thawing, extract was centrifuged for 20 min at 12,000 rpm at 4°C. The cleared suspension was quantified by UV spectroscopy, and 50 μg of proteins were resuspended in Laemmli buffer. After separation into a 4–20% SDS-PAGE, transfer to a nitrocellulose membrane and incubation with primary and secondary antibodies (as described in ‘Western Blot’), proteins were detected by scan on Odyssey CLx scanner and quantified with ImageStudioLite software (Li-Cor). For each experiment, the ratio of signal intensity in treated condition vs signal intensity in non-treated condition was measured. The means and standard deviations of three experiments are presented in the figure.

### Northern blot

Northern blotting protocol was adapted from Summer et al. (2009) and http://archive.bio.ed.ac.uk/ribosys/protocols/website_Northern_blotting.pdf. 5 μg of Trizol extracted RNAs or 1 μg of immunoprecipitated RNAs was separated on 4% urea PAGE against 0.5× TBE buffer at 25 W for 90 min. RNAs were transferred to Amersham Hybond-NX membrane (#RPN203T; GE Healthcare) for 2 hr at 65 V, UV-cross-linked, blocked for 1 hr in SES buffer (0.5 M Na3PO4 pH7.2, 7% [wt/vol] SDS, 1 mM EDTA), and hybridized O/N at 37°C with radiolabelled α-satellite probes (end-labeling method using primer extension-system AMV reverse transcriptase kit, #E3030; Promega, Madison, WI) diluted in SES buffer. Membrane was washed in 6× SSPE (1.08 M NaCl, 0.06 M NaH2PO4, 20 mM EDTA, pH adjusted to 7.4) two times for 15 min at 37°C and two times for 30 min at 42°C. Blot was exposed to P32-sensitive film (Hyblot CL film, #E3012; Denville, Saint Laurent, Canada) at −80°C to reveal the potential interaction for a short (<24 hr) or long (>24 hr) period of time. The sequences of the radiolabeled probes are indicated in Supplementary file 3.

### Computational analysis

Computational prediction of RNA binding residues was performed with BindN+ program (http://bioinfo.ggc.org/bindn+/) with a specificity equal to 85% (Wang et al., 2010). We used human CENP-A (P49450), H3.1 (P68431) and HJURP (Q8NCD3), and Scm3 (Q12334) protein sequences from uniprot database.

### Transfection with shRNA

pGFP-V-RS plasmids expressing shRNA sequence were purchased from Origine (Rockville, MD). Two controls were used for each experiment: the empty vector (#TR30007) and the vector expressing scrambled sequence cassette (#TR30013; shRNAscram 5′-GCACTACCAGAGCTAACTCAGATAGTACT-3′). Two shRNA sequence cassettes were designed from the centromeric α-satellite consensus sequence (Waye and Willard, 1987): shRNAsat1 5′-TGTGTGCATTCAACTCACAGAGTTG-3′ and shRNAsat2 5′-CAACTCACAGAGTTGAACCTTCCTT-3′ (Figure 6—figure supplement 1); and from the cenRNA#1 sequence (Figure 5—figure supplement 1): shRNAcenRNA#1 5′-TGCTAGACAGCCAATGCAATTCCTCATTA-3′.

Cells were transfected with Escort II Transfection Reagent (#L6037; Sigma-Aldrich) following manufacturer instruction. 48 hr after transfection, the medium was replaced every 2 days with fresh medium complemented with 0.5 μg/ml puromycin (#A1113802; Gibco) to select transfected cells. At day 6, cells were either treated for IF or RNA extraction.

### Quantitative PCR (qtPCR)

To detect α-satellite expression level in shRNA-transfected cells, RNAs were extracted, quantified by UV-spectroscopy, and equal quantities were retro-transcribed using Superscript III First-Strand Synthesis kit as described above (i.e., RNA extraction, retro-transcription, and Polymerase Chain Reaction). To perform qtPCR, complementary DNAs (cDNAs) samples were prepared using the iQ SYBR Green supermix (#170-8880; Biorad) following manufacturer's protocol. Control reactions without the cDNA were performed to rule out non-specific amplification. The qtPCR was run on Step one plus Real time PCR system (Applied Biosystem, Grand Island, NY). Primer sequences are available on Supplementary file 3.

The comparative cycle threshold (CT) method was used to analyze the expression level of α-satellite transcripts. CT values were normalized against the average CT value of the housekeeping gene β-actin. The ΔΔCT values were determined from the scrambled shRNA samples. Relative fold differences (2−ΔΔCT) are indicated on figure.

### β-galactosidase assay

Senescent cells were detected using the protocol developed by Itahana et al. (2007). Briefly, 6 days post transfection with shRNA, HeLa cells grown in a six-well plate were washed two times in 1× PBS, fixed 5 min at RT with 3.7% formaldehyde in 1X PBS, and washed twice with 1X PBS. Cells were stained with the X-gal staining solution (1 mg/ml of X-gal [#B9146; Sigma-Aldrich], 40 mM citric acid/sodium phosphate buffer pH 6.0, 5 mM potassium ferricyanide [#702587; Sigma-Aldrich], 5 mM potassium ferrocyanide [#P3289; Sigma-Aldrich], 150 mM NaCl, 2 mM MgCl2) O/N at 37°C. After rinsing, cells were observed under a light microscope for blue color, indicator of senescence.

### Statistical analysis

Standard deviation was determined for all quantification measures. To test the significance of these measures, a two-tailed, paired Student's t test was performed. For all tests α was assumed to be 0.05. The p-value is indicated on the figures or tables each time it was evaluated.
